# PetaByte

./: .editorconfig  .eslintrc.cjs  .gitignore  AUDIT_REPORT.md  Cargo.toml  README.md  deny.toml  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/petabyte-app/: Cargo.toml
crates/petabyte-app/src/: lib.rs  menu.rs  state.rs  wiring.rs
crates/petabyte-app/src/adapters/: cache_cleaner_adapter.rs  health_adapter.rs  mod.rs  progress_emitter.rs
crates/petabyte-app/src/commands/: clean_commands.rs  duplicate_commands.rs  file_commands.rs  health_commands.rs  mod.rs  move_commands.rs  scan_commands.rs
crates/petabyte-app/src/events/: duplicate_events.rs  error_events.rs  file_events.rs  health_events.rs  mod.rs  operation_events.rs  scan_events.rs
crates/petabyte-cache-cleaner/: Cargo.toml
crates/petabyte-cache-cleaner/src/: error.rs  lib.rs  rule_engine.rs  safe_remover.rs  size_calculator.rs
crates/petabyte-cache-cleaner/src/rules/: builtin.rs
crates/petabyte-core-engine/: Cargo.toml
crates/petabyte-core-engine/src/: error.rs  lib.rs
crates/petabyte-core-engine/src/dto/: clean_result.rs  duplicate_result.rs  health_result.rs  mod.rs  move_request.rs  scan_config.rs  scan_result.rs
crates/petabyte-core-engine/src/use_cases/: calculate_health.rs  clean_cache.rs  find_duplicates.rs  find_large_files.rs  mod.rs  scan_drive.rs  smart_move.rs
crates/petabyte-database/: Cargo.toml
crates/petabyte-database/src/: connection.rs  error.rs  lib.rs
crates/petabyte-database/src/migrations/: m001_initial.rs  m002_indexes.rs  m003_duplicates.rs  mod.rs
crates/petabyte-database/src/models/: file_row.rs  journal_row.rs  mod.rs  scan_row.rs
crates/petabyte-database/src/repositories/: duplicate_repo.rs  file_repo.rs  health_repo.rs  journal_repo.rs  mod.rs  scan_repo.rs
crates/petabyte-database/src/services/: batch_writer.rs  mod.rs  progress_synchronizer.rs  scan_persistence_service.rs  session_manager.rs
crates/petabyte-duplicate-detector/: Cargo.toml
crates/petabyte-duplicate-detector/benches/: duplicate_detector_bench.rs
crates/petabyte-duplicate-detector/src/: config.rs  detector.rs  duplicate_reporter.rs  error.rs  extension_grouper.rs  full_hash_verifier.rs  hash_cache.rs  lib.rs  partial_hash_matcher.rs  size_grouper.rs
crates/petabyte-hasher/: Cargo.toml
crates/petabyte-hasher/src/: error.rs  full_hasher.rs  hash_cache.rs  lib.rs  partial_hasher.rs  tiered_hasher.rs
crates/petabyte-health-score/: Cargo.toml
crates/petabyte-health-score/src/: config.rs  error.rs  lib.rs  recommendation_engine.rs  scoring_engine.rs  trend_analyzer.rs
crates/petabyte-health-score/src/factors/: duplicate_ratio.rs  fragmentation.rs  free_space.rs  large_file_ratio.rs  mod.rs  temp_file_ratio.rs
crates/petabyte-scanner/: Cargo.toml
crates/petabyte-scanner/benches/: scanner_benchmark.rs
crates/petabyte-scanner/src/: checkpoint.rs  config.rs  entry_mapper.rs  error.rs  filter_rules.rs  lib.rs  parallel_walker.rs  permission_handler.rs  symlink_handler.rs
crates/petabyte-scanner/tests/: scanner_integration.rs
crates/petabyte-shared/: Cargo.toml
crates/petabyte-shared-models/: Cargo.toml
crates/petabyte-shared-models/src/entities/: cache_entry.rs  duplicate_group.rs  file_entry.rs  health_metrics.rs  mod.rs  move_operation.rs  scan_session.rs
crates/petabyte-shared-models/src/ports/: cache_cleaner_port.rs  duplicate_port.rs  file_op_port.rs  file_repository.rs  hasher_port.rs  health_score_port.rs  mod.rs  move_journal_port.rs  progress_port.rs  scan_repository.rs  scanner_port.rs
crates/petabyte-shared-models/src/value_objects/: errors.rs  file_category.rs  file_hash.rs  file_path.rs  file_size.rs  mod.rs
crates/petabyte-shared/src/: constants.rs  error.rs  format_utils.rs  lib.rs  path_utils.rs  platform.rs  serde_utils.rs  test_utils.rs
crates/petabyte-smart-move/: Cargo.toml
crates/petabyte-smart-move/src/: dry_run.rs  error.rs  lib.rs  safe_mover.rs  trash_handler.rs  undo_manager.rs
docs/: IMPLEMENTATION_PROGRESS.md  KNOWN_ISSUES.md  MASTER_SPECIFICATION.md  MILESTONE_V1.md  RELEASE_CANDIDATE.md  TECHNICAL_DEBT.md  VALIDATION_REPORT.md
docs/architecture/: data-model.md  duplicate-detector-engine.md  health-score-engine.md  repository-structure.md  scanner-engine.md  security-review.md  smart-move-engine.md  system-architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: entitlements.plist
src-tauri/migrations/: 001_initial.sql  002_indexes.sql
src-tauri/src/: main.rs
src/__tests__/: App.test.tsx  AppShell.test.tsx  Button.test.tsx  Card.test.tsx  ErrorBoundary.test.tsx  Sidebar.test.tsx  Spinner.test.tsx  setup.ts
src/__tests__/bridge/: cacheBridge.test.ts  duplicateBridge.test.ts  eventLifecycle.test.ts  eventSystem.test.ts  healthBridge.test.ts  moveBridge.test.ts  progressSync.test.ts  scannerBridge.test.ts  storeIntegration.test.ts  tauriCheck.test.ts
src/__tests__/components/: Cleaner.test.tsx  Dashboard.test.tsx  Duplicates.test.tsx  Health.test.tsx  Move.test.tsx  Scanner.test.tsx  Settings.test.tsx
src/__tests__/e2e/: 01-scanner-workflow.test.ts  02-duplicate-workflow.test.ts  03-smart-move-workflow.test.ts  04-cache-cleaner-workflow.test.ts  05-health-score-workflow.test.ts  06-event-system.test.ts  07-error-handling.test.ts  (+1 more)
src/bridge/: cache.ts  duplicates.ts  eventBus.ts  events.ts  health.ts  index.ts  move.ts  scanner.ts  tauriCheck.ts
src/hooks/: useEventLog.ts  useTauri.ts  useTheme.ts
src/mocks/: cache.ts  dashboard.ts  duplicates.ts  health.ts  move.ts  scanner.ts  settings.ts
src/pages/: CleanerPage.tsx  DashboardPage.tsx  DuplicatesPage.tsx  HealthScorePage.tsx  MovePage.tsx  ScannerPage.tsx  SettingsPage.tsx
src/stores/: cleanerStore.ts  duplicateStore.ts  healthStore.ts  moveStore.ts  scanStore.ts  settingsStore.ts  themeStore.ts
src/types/: events.ts  format.ts  index.ts
(+61 files in other folders)
